# accessibility-champion

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SKILL.md  a11y_axe.py  a11y_context.py  a11y_css.py  a11y_css_fetch.py  a11y_extract.py  a11y_focus.py  a11y_lint.py  a11y_mapping.py  a11y_rules.py  color-contrast.md  framework-patterns.md  pyproject.toml  test_a11y_extract.py  test_a11y_lint.py  test_phase2.py  test_phase3.py
.github/workflows/: ci.yml
a11y_rules/: __init__.py  aria.py  base.py  content.py  document.py  forms.py  interactive.py  links.py  media.py  structure.py
demo/: broken_page.html  expected_output.txt  passing_page.html
fixtures/: LoginForm.svelte  LoginForm.tsx  LoginForm.vue  login.component.html
fixtures/css/: bad.css  contrast_fail_inline.html  contrast_var_skip.html  focus_suppressed.html  stylesheet_contrast.html  touch_target_small.html
references/: sample_output.md
scripts/: check_max_file_size.py
